--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@
    **• Remember display font chosen by user on dictionary window
    **• Now has a dedicated installer
    • Character editor can now be used on text boxes in properties panel
+   • Character editor context menu now matches application theme
    • Fixed bug where "clear style" button on edit style dialog wouldn't refresh the preview
    • Fixed bug where character editor would pop up after being closed
    • Fixed bug where character insertion could sometimes fail
