--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@
    **• Export pages to Markdown
    **• Remember display font chosen by user on dictionary window
    **• Now has a dedicated installer
+   • Launch character editor to right of main window on startup
    • Character editor can now be used on text boxes in properties panel
    • Character editor context menu now matches application theme
    • Fixed bug where "clear style" button on edit style dialog wouldn't refresh the preview
