--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,7 +12,7 @@
    • Launch character editor to right of main window on startup
    • Character editor can now be used on text boxes in properties panel
    • Character editor context menu now matches application theme
-   **• Bug Fix: Dictionary would sometime appear behind the main window
+   • Bug Fix: Dictionary would sometimes appear behind the main window
    • Bug Fix: "Clear style" button on edit style dialog wouldn't refresh preview
    • Bug Fix: Character editor would pop up after being closed
    • Bug Fix: Character insertion could sometimes fail
