--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,12 +8,13 @@
    **• Export pages to Markdown
    **• Export dictionary to Markdown
    **• Copy text as Markdown
-   • Remember display font chosen by user on dictionary window
    **• Now has a dedicated installer
+   • Remember display font chosen by user on dictionary window
    • Launch character editor to right of main window on startup
    • Character editor can now be used on text boxes in properties panel
    • Character editor context menu now matches application theme
    • Bug Fix: Creating a new notebook wouldn't clear words from the last file's dictionary
+   • Bug Fix: When adding a new page to an empty notebook, the page's tab wouldn't automatically open
    • Bug Fix: Character editor file tab wouldn't be reset when creating a new file
    • Bug Fix: Dictionary would sometimes appear behind the main window
    • Bug Fix: "Clear style" button on edit style dialog wouldn't refresh preview
