--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,14 +1,16 @@
-﻿ Version 10.0 (April 12, 2020)
+Version 10.1 (TBD)
+   **• Export pages to Markdown
+   **• Export dictionary to Markdown
+   **• Copy text as Markdown
+   **• Now has a dedicated installer
+
+﻿Version 10.0 (April 8, 2020)
    • Full HiDPI support
    • Use Taiga icon pack
    • Export to new Thorn Writer format
    • Export pages to HTML
    • Add option in settings to load character editor on startup
    • Tweaked app icon
-   **• Export pages to Markdown
-   **• Export dictionary to Markdown
-   **• Copy text as Markdown
-   **• Now has a dedicated installer
    • Remember display font chosen by user on dictionary window
    • Launch character editor to right of main window on startup
    • Character editor can now be used on text boxes in properties panel
