--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,7 +3,10 @@ Version 10.1 (TBD)
    **• Export dictionary to Markdown
    **• Copy text as Markdown
    **• Now has a dedicated installer
-   **• Easier resizing of images before insertion
+   • Easier resizing of images before insertion
+   **• Pressing CTRL+S on character editor and dictionary now saves the notebook
+   **• Add options to wrap selected text in brackets [] and // 
+   • Major code cleanup
    • Bug Fix: Word count wouldn't update automatically when opening a new file
 
 ﻿Version 10.0 (April 8, 2020)
